🪲Fix wrapping and spacing inconsistencies

--- a/15-N.Stepanov/03-huffman/style.styl
+++ b/15-N.Stepanov/03-huffman/style.styl
@@ -49,9 +49,6 @@ $transition-duration = 0.7s
         font-size 30px
 
 #algorithm-result
-    overflow-wrap break-word
-    word-break break-all
-
     & .algorithm-result-content
         padding space(2)
         max-height 400px
