--- a/15-N.Stepanov/shared/style/classes.styl
+++ b/15-N.Stepanov/shared/style/classes.styl
@@ -53,6 +53,17 @@
 .full-width
     width 100%
 
+.pre
+    white-space pre
+
+.break-words
+    overflow-wrap break-word
+    word-break break-all
+
+.not-break-words
+    overflow-wrap normal
+    word-break normal
+
 ul.table-of-contents
     list-style "📌"
     & > li
